--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,17 @@ description = "X5 case solution"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "transformers>=4.49.0",
     "pandas>=2.2.3",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.1",
-    "numpy>=2.2.3",
     "pandas>=2.2.3",
     "seaborn>=0.13.2",
     "pydantic-settings>=2.8.1",
     "langchain>=0.3.20",
     "langchain-openai>=0.3.8",
     "langgraph>=0.3.5",
+    "langchain-community>=0.3.19",
+    "vllm>=0.7.3",
+    "gradio>=5.20.1",
 ]
