--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "llama-index-llms-openai-like>=0.3.4",
     "llama-index>=0.12.23",
     "llama-index-vector-stores-qdrant>=0.4.3",
+    "llama-index-utils-workflow>=0.3.0",
 ]
