--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,5 @@ dependencies = [
     "llama-index>=0.12.23",
     "llama-index-vector-stores-qdrant>=0.4.3",
     "llama-index-utils-workflow>=0.3.0",
+    "llama-index-embeddings-huggingface>=0.5.2",
 ]
