--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,6 @@ dependencies = [
     "llama-index>=0.12.23",
     "llama-index-vector-stores-qdrant>=0.4.3",
     "llama-index-utils-workflow>=0.3.0",
+    "langfuse>=2.59.7",
+    "llama-index-callbacks-langfuse>=0.3.0",
 ]
