--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - /home/sv-cheats-1/.cache/huggingface:/root/.cache/huggingface
+      - ${HOME}/.cache/huggingface:/root/.cache/huggingface
     deploy:
       resources:
         reservations:
@@ -13,6 +13,16 @@ services:
               count: all
               capabilities: [ gpu ]
     command: --model Vikhrmodels/Vikhr-Llama-3.2-1B-Instruct
+  
+  qdrant:
+    image: qdrant/qdrant 
+    ports:
+      - 6333:6333
+      - 6334:6334
+    volumes:
+      - /var/lib/qdrant_storage:/qdrant/storage:z
+
 
 volumes:
   huggingface-cache:
+  qdrant-storage:
