--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
             - driver: nvidia
               count: all
               capabilities: [ gpu ]
-    command: --model Vikhrmodels/Vikhr-Llama-3.2-1B-Instruct
+    command: --model Vikhrmodels/Vikhr-Nemo-12B-Instruct-R-21-09-24 --dtype half --max_model_len 15000 --api-key token-123
   
   qdrant:
     image: qdrant/qdrant 
