--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "X5 case solution"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "deepeval>=2.5.3",
     "gradio>=5.20.1",
     "gradio-client>=1.7.2",
     "ipykernel>=6.29.5",
