--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     command: --model Vikhrmodels/Vikhr-Nemo-12B-Instruct-R-21-09-24 --dtype half --max_model_len 15000 --api-key token-123
     networks:
       - x5
-      
+
   embedder:
     image: vllm/vllm-openai:latest
     ports:
@@ -44,10 +44,7 @@ services:
       - x5
 
   ui:
-    # image: ghcr.io/da-the-dev/x5-automation
-    build: 
-      context: .
-    pull_policy: build
+    image: ghcr.io/da-the-dev/x5-automation:latest
     ports:
       - 7860:7860
     networks:
